--- a/construction/appointment_booking/frontend/src/app/features/doctor-listing/doctor-listing.component.scss
+++ b/construction/appointment_booking/frontend/src/app/features/doctor-listing/doctor-listing.component.scss
@@ -5,9 +5,9 @@ h1 { margin-bottom: 16px; }
 input { flex: 1; padding: 8px 12px; border:1px solid $border; border-radius: 8px; }
 .filter-buttons { display: flex; gap: 8px; align-items: center; button { padding: 12px 12px; border:1px solid $border; border-radius: 81px; background: #f9fafb; cursor: pointer; &:hover{ background: #f3f4f6; }}}
 
-.grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; }
-.card { background:$surface; border:1px solid $border; border-radius: 12px; padding: 20px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,.04); width: 320px; height: 350px; display: flex; flex-direction: column; justify-content: space-between; }
-.avatar { width: 80px; height: 80px; border-radius: 999px; object-fit: cover; margin-bottom: 10px; }
+.grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; }
+.card { background:$surface; border:1px solid $border; border-radius: 12px; padding: 20px; text-align: center; box-shadow: 0 4px 12px rgba(0,0,0,.04); width: 400px; height: 370px; display: flex; flex-direction: column; justify-content: space-between; }
+.avatar { width: 80px; height: 80px; border-radius: 999px; object-fit: cover; margin: 0 auto 10px auto; }
 .specialty { color:$muted; font-size: 14px; margin: 4px 0; }
 .rating { font-size: 14px; margin: 4px 0; }
 .next { font-size: 13px; color:$muted; margin-bottom: 10px; }
@@ -35,7 +35,7 @@ input { flex: 1; padding: 8px 12px; border:1px solid $border; border-radius: 8px
   border: 1px solid #e5e7eb;
   border-radius: 10px;
   background: #fff;
-  font: 500 14px/1 Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial;
+  font: normal 14px/1 Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial;
   color: #111827;
   outline: none;
   transition: box-shadow .15s, border-color .15s;
